--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -23,6 +23,10 @@
                 <img src="../../../assets/icons/twitter.png" alt="Twitter" class="mx-1">
                 <img src="../../../assets/icons/linkedin.png" alt="Linkedin" class="mx-1">
                 <img src="../../../assets/icons/youtube.png" alt="youtube" class="mx-1">
+              
+                <section>
+                    <span class="text-white">Derechos reservados - Verónica Gomez U. 2021</span>
+                </section>
             </article>
 
         </section>
